2001-06-10  Christian Stimming  <stimming@tuhh.de>

	* de.po: updated German translation.
	
	* configure.in, doc/sgml/Makefile.am, doc/sgml/de_DE/*: Added
	German translation of a few manual pages, including a Whats-New
	table for the translated words.

2001-06-10  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-print.sgml: fix docs

	* src/engine/gnc-engine-util.c: change debug levels to warning

2001-06-10  Bill Gribble  <grib@billgribble.com>

	* src/scm/report/welcome-to-gnucash.scm: fix bug in "welcome to
	gnucash" report

	* src/gnome/dialog-column-view.c: remove printout 
	
2001-06-09  Dave Peticolas  <dave@krondo.com>

	* configure.in: fix bug

	* doc/sgml/C/xacc-about.sgml: update credits

	* src/gnome/window-main.c (gnc_main_window_about_cb): update
	credits

	* AUTHORS: update credits

	* src/gnome/reconcile-list.c (gnc_reconcile_list_refresh): fix
	bugs

	* src/gnome/dialog-utils.c (gnc_clist_add_check): fix bugs

	* doc/sgml/pt_PT/Makefile.am: remove adjust balance docs

	* doc/sgml/C/Makefile.am: remove adjust balance docs

	* doc/sgml/de_DE/xacc-quickstart.sgml: fix docs

	* doc/sgml/pt_PT/xacc-quickstart.sgml: fix docs

	* doc/sgml/C/xacc-quickstart.sgml: fix docs

	* src/scm/help-topics-index.scm: work on index

	* src/gnome/window-help.c (gnc_help_show_topic): first check
	current location for match

	* src/SplitLedger.c (xaccSRDuplicateCurrent): fix bug

	* src/gnc-ui-util.c (gnc_find_or_create_equity_account): allow
	group to be specified
	(gnc_account_create_opening_balance): search in given account's
	group

2001-06-08  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.c (gnc_find_or_create_equity_account): first
	search for untranslated name, then translated name.

	* src/gnome/new-user-callbacks.c
	(on_chooseAccountTypesPage_prepare): suspend & resume gui
	refreshes while loading accounts.
	add more suspend & resume calls for other big changes

	* src/gnome/new-user-funs.c (gnc_create_newUserDialog): make clist